# db/schema.rb
@@ -12,7 +12,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.1].define(version: 20_250_425_142_901) do
+ActiveRecord::Schema[7.1].define(version: 20_250_515_120_000) do
   # These are extensions that must be enabled in order to support this database
   enable_extension 'plpgsql'
 
@@ -25,6 +25,8 @@ ActiveRecord::Schema[7.1].define(version: 20_250_425_142_901) do
     t.string 'user_agent'
     t.datetime 'created_at', null: false
     t.datetime 'updated_at', null: false
+    t.boolean 'active', default: true, null: false
+    t.index ['active'], name: 'index_sessions_on_active'
     t.index ['expires_at'], name: 'index_sessions_on_expires_at'
     t.index ['token'], name: 'index_sessions_on_token', unique: true
     t.index ['user_id'], name: 'index_sessions_on_user_id'
@@ -35,6 +37,10 @@ ActiveRecord::Schema[7.1].define(version: 20_250_425_142_901) do
     t.string 'password_digest'
     t.datetime 'created_at', null: false
     t.datetime 'updated_at', null: false
+    t.string 'provider'
+    t.string 'uid'
+    t.string 'name'
+    t.boolean 'active'
   end
 
   add_foreign_key 'sessions', 'users'
